--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
-<% if user_signed_in? %> 
- <div> Welcome <%= current_user.email %> </div> 
-  <%= button_to "Sign out", destroy_user_session_path, method: :delete %> 
+<% if user_signed_in? %>
+  <div>Welcome <%= current_user.email %></div>
 <% else %>
-  <%= button_to "Sign in", new_user_session_path %> 
+  <h1>Welcome Stranger!</h1>
 <% end %>
-<h1>Hello DigitalOcean!</h1>
+
+
