--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,19 @@
-<% if user_signed_in? %>
-  <div>Welcome <%= current_user.email %></div>
-<% else %>
-  <h1>Welcome Stranger!</h1>
-<% end %>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>RocketDeliveryBackend</title>
+  <%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
+</head>
+<body>
+  <div class="center-container">
+    <% if user_signed_in? %>
+      <div class="welcome-text">Welcome <%= current_user.email %></div>
+    <% else %>
+      <h1 class="welcome-text">Welcome Stranger!</h1>
+    <% end %>
+  </div>
+</body>
+</html>
+
 
 
