first look of employees page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,10 +11,7 @@
     <% else %>
       <%= button_to "Sign in", new_user_session_path, class: "signin-button" %>
     <% end %>
+    <!-- Link to Employees' index page -->
+    <%= link_to "Employees", employees_path, class: "employees-link" %>
   </div>
 </div>
-
-
-
-
-
