--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -1,10 +1,16 @@
 /* navbar.css */
-.navbar-container {
+body {
+    margin: 0; /* Supprimer les marges par défaut du corps de la page */
+    padding: 0; /* Supprimer les paddings par défaut du corps de la page */
+  }
+  
+  .navbar-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 40px;
+    padding: 30px;
     background-color: #f5f5f5; /* Add your desired background color here */
+    margin: 0; /* Supprimer les marges autour de la navbar */
   }
   
   .navbar-left {
@@ -15,5 +21,4 @@
     text-decoration: none; /* Removes the underline from the link */
     color: #000; /* Add your desired text color here */
   }
-  
   
