--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,9 +1,9 @@
 <!-- app/views/employees/show.html.erb -->
 <h1>Employee Details</h1>
 
-<p><strong>Name:</strong> <%= @employee.name %></p>
 <p><strong>Email:</strong> <%= @employee.email %></p>
-<p><strong>Position:</strong> <%= @employee.position %></p>
+<p><strong>Phone:</strong> <%= @employee.phone %></p>
 
 <%= link_to 'Edit', edit_employee_path(@employee) %> |
 <%= link_to 'Back', employees_path %>
+
