change position for phone in edit

--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -11,8 +11,8 @@
   </p>
 
   <p>
-    <%= form.label :position %><br>
-    <%= form.text_field :position %>
+    <%= form.label :phone %><br>
+    <%= form.text_field :phone %>
   </p>
 
   <p>
