--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,30 +1,39 @@
 <!-- app/views/employees/index.html.erb -->
-<h1>Employees List</h1>
+<%= stylesheet_link_tag "employee", media: "all" %>
+
+<div class="table-container">
+  <h1>Employees List</h1>
 
 <table>
   <thead>
     <tr>
+      <th>Name</th>
       <th>Email</th>
       <th>Phone</th>
       <th>Actions</th>
     </tr>
   </thead>
   <tbody>
-    <% @employees.each do |employee| %>
-      <tr>
-        <td><%= employee.email %></td>
-        <td><%= employee.phone %></td>
-        <td>
+  <% @employees.each do |employee| %>
+    <tr>
+      <td><%= employee.user.name %></td>
+      <td><%= employee.email %></td>
+      <td><%= employee.phone %></td>
+      <td>
+        <div class="actions-container">
           <%= link_to "View", employee_path(employee), class: "view-link" %>
           <%= link_to "Edit", edit_employee_path(employee), class: "edit-link" %>
           <%= button_to "Delete", employee_path(employee), method: :delete, data: { confirm: "Are you sure you want to delete this employee?" }, class: "delete-button" %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
+        </div>
+      </td>
+    </tr>
+  <% end %>
 </table>
+</div>
 
-<%= link_to "New Employee", new_employee_path, class: "new-employee-link" %>
+<%= link_to new_employee_path, class: "new-employee-button" do %>
+  New Employee
+<% end %>
 
 
 
