--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -1,24 +1,59 @@
 /* navbar.css */
 body {
-    margin: 0; /* Supprimer les marges par défaut du corps de la page */
-    padding: 0; /* Supprimer les paddings par défaut du corps de la page */
-  }
-  
-  .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px;
-    background-color: #f5f5f5; /* Add your desired background color here */
-    margin: 0; /* Supprimer les marges autour de la navbar */
-  }
-  
-  .navbar-left {
-    font-size: 24px; /* Add your desired font size here */
-  }
-  
-  .rf-admin-link {
-    text-decoration: none; /* Removes the underline from the link */
-    color: #000; /* Add your desired text color here */
-  }
-  
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
+  background-color: #f5f5f5;
+  margin: 0;
+}
+
+.navbar-left {
+  font-size: 24px;
+}
+
+.rf-admin-link {
+  text-decoration: none;
+  color: #000;
+}
+
+/* Center the "Employees" button */
+.navbar-center {
+  flex: 1;
+  text-align: center;
+}
+
+.employees-button {
+  display: inline-block;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  padding: 8px 16px;
+  border-radius: 4px;
+  text-decoration: none;
+}
+
+.employees-button:hover {
+  background-color: #0056b3;
+}
+
+/* Apply styles to the "Sign in" button */
+.signin-button {
+  color: #fff;
+  background-color: #007bff;
+  padding: 5px 10px;
+  border: none;
+  cursor: pointer;
+  text-decoration: none;
+  border-radius: 4px;
+}
+
+.signin-button:hover {
+  background-color: #0056b3;
+}
