--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -21,7 +21,7 @@
       <td><%= employee.phone %></td>
       <td>
         <div class="actions-container">
-          <%= link_to "View", employee_path(employee), class: "view-link" %>
+          <%= link_to "Show", employee_path(employee), class: "view-link" %>
           <%= link_to "Edit", edit_employee_path(employee), class: "edit-link" %>
           <%= button_to "Delete", employee_path(employee), method: :delete, data: { confirm: "Are you sure you want to delete this employee?" }, class: "delete-button" %>
         </div>
