--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,9 +1,16 @@
 <!-- app/views/employees/show.html.erb -->
-<h1>Employee Details</h1>
+<%= stylesheet_link_tag "show", media: "all" %>
 
-<p><strong>Email:</strong> <%= @employee.email %></p>
-<p><strong>Phone:</strong> <%= @employee.phone %></p>
+<div class="show-container">
+  <div class="show-details">
+    <h1>Employee Details</h1>
 
-<%= link_to 'Edit', edit_employee_path(@employee) %> |
-<%= link_to 'Back', employees_path %>
+    <p><strong>Email:</strong> <%= @employee.email %></p>
+    <p><strong>Phone:</strong> <%= @employee.phone %></p>
+  </div>
 
+  <div class="actions-container">
+    <%= link_to 'Edit', edit_employee_path(@employee) %>
+    <%= link_to 'Back', employees_path %>
+  </div>
+</div>
