new page front end

--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,6 +1,10 @@
 <!-- app/views/employees/new.html.erb -->
-<h1>New Employee</h1>
+<div class="page-wrapper">
+  <h1>New Employee</h1>
 
-<%= render 'form' %>
+  <div class="content">
+    <%= render 'form' %>
 
-<%= link_to 'Back', employees_path %>
+    <%= link_to 'Back', employees_path %>
+  </div>
+</div>
