--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -1,22 +1,10 @@
 <!-- app/views/employees/_form.html.erb -->
-<%= form_with model: @employee do |form| %>
-  <p>
-    <%= form.label :name %><br>
-    <%= form.text_field :name %>
-  </p>
 
-  <p>
-    <%= form.label :email %><br>
-    <%= form.email_field :email %>
-  </p>
+<%= form.label :name %>
+<%= form.text_field :name, class: 'form-control' %>
 
-  <p>
-    <%= form.label :phone %><br>
-    <%= form.text_field :phone %>
-  </p>
+<%= form.label :phone %>
+<%= form.text_field :phone, class: 'form-control' %>
 
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
-
+<%= form.label :email %>
+<%= form.text_field :email, class: 'form-control' %>
