--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,9 @@
       <button class="employees-button">
         <%= link_to "Employees", employees_path, class: "employees-link" %>
       </button>
+      <button class="restaurants-button">
+      <%= link_to "Restaurants", restaurants_path, class: "restaurants-link" %>
+    </button>
     <% end %>
   </div>
 
@@ -21,3 +24,4 @@
     <% end %>
   </div>
 </div>
+
