--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Edit <%= @restaurant.name %></h1>
+<!-- app/views/restaurants/edit.html.erb -->
+<%= stylesheet_link_tag "restaurant/restaurant", media: "all" %>
 
-<%= render 'form', restaurant: @restaurant %>
+<div class="page-wrapper">
+  <h1>Edit <%= @restaurant.name %></h1>
 
-<%= link_to 'Show', @restaurant %> |
-<%= link_to 'Back', restaurants_path %>
+  <%= render 'form', restaurant: @restaurant %>
+
+  <div class="links-container">
+    <%= link_to 'Show', @restaurant, class: 'show-link' %> |
+    <%= link_to 'Back', restaurants_path, class: 'back-link' %>
+  </div>
+</div>
+
